WebCore/editing/InsertTextCommand.h
@@ -52,6 +52,8 @@ private:
     Position insertTab(const Position&);
     
     bool performTrivialReplace(const String&, bool selectInsertedText);
+    
+    void insertTextIntoNodeAndRebalanceWhitespace(const String& text, Text* node, unsigned offset);
 
     unsigned m_charactersAdded;
 };
